rabbit-install-operator/namespaces/rabbitmq-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/component: rabbitmq-operator
    app.kubernetes.io/name: rabbitmq-system
    app.kubernetes.io/part-of: rabbitmq
  name: rabbitmq-system
