rabbit-install-operator/namespaces/rabbitmq-system/ingress-rabbit.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmqcluster-ingress
  labels:
    app: rabbitmqcluster
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmqcluster-rabbitmq-client
            port:
              number: 15672
